fixed an overflowing input

--- a/src/App.scss
+++ b/src/App.scss
@@ -103,6 +103,7 @@ textarea {
 }
 
 .dropzone {
+  position: relative;
   cursor: pointer;
   font-size: 1.2rem;
   text-align: center;
